--- a/composer.json
+++ b/composer.json
@@ -6,28 +6,41 @@
     "homepage": "https://github.com/hojanssen/contao_hjk_vb_phoenix",
     "license": "LGPL-3.0+"
     
+    "authors": [
+        {
+            "name": "Holger Janßen-Kroll",
+            "email": "contao@holgerjanssen.de",
+            "homepage": "https://ho-jk.de"
+        }
+    ],
+
+    "support":{
+        "issues":"https://github.com/hojanssen/contao_hjk_vb_phoenix/issues",
+        "source":"https://github.com/hojanssen/contao_hjk_vb_phoenix"
+    },
     
     "require": {
         /* PHP Version */
         "php": ">=5.3",
  
         /* Contao Version */
-        "contao/core": ">=3.5.27||>=4.4",
+        "contao/core": ">=3.5.27",
  
         /* Das Plugin / Der Installer */
         "contao-community-alliance/composer-plugin": "~2.0",
  
     }
 
-
+    "autoload": {
+        "classmap": [""]
+    },
+    
     "extra": {
         "contao": {
             /* sources wird immer synchronisiert, alte Dateien gelöscht, neue hinzugefügt, veränderte überschrieben */
             "sources": {
-                "<pfad innerhalb des Repository>": "<pfad innerhalb von Contao>",
- 
-                /* Beispiel */
-                "TL_ROOT/system/modules/hjk_vb_phoenix/": "src/",
+                //"<pfad innerhalb des Repository>": "<pfad innerhalb von Contao>",
+                "src/": "system/modules/hjk_vb_phoenix/",
             }, 
         }
     }
