--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "require": {
         "php": ">=5.3",
  
-        "contao/core": "~3.2 || ~4.4",
+        "contao/core": ">=3.5.27",
  
         "contao-community-alliance/composer-plugin": "~2.4 || ~3.0"
     },
