--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
  
         "contao/core": ">=3.5.27",
  
-        "contao-community-alliance/composer-plugin": "~2.4 || ~3.0"
+        "contao-community-alliance/composer-plugin": "*"
     },
 
     "autoload": {
